sendDirectCastFromCustomAccount,warpcast,veniceKeys

--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,7 @@ NEXT_PUBLIC_OPEN_AI_API_KEY=
 NETWORK_ID="base-sepolia"
 
 NEYNAR_API_KEY=
+NEXT_PUBLIC_NEYNAR_CLIENT_ID
+NEXT_PUBLIC_WC_API_KEY=
 AGENT_SIGNER_UUID=
 WC_API_KEY=
