--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@langchain/core": "^0.3.32",
     "@langchain/langgraph": "^0.2.41",
     "@langchain/openai": "^0.3.17",
+    "@neynar/react": "^0.9.7",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
